@@ -4,6 +4,7 @@
 - Enable inline editing in the admin component [#94, #95, #114]
 - Fix field-required errors not being shown by adding a popup
 - Accept 0 as valid required value on the number input [#119]
+- Add a Password input type [#105]
 
 ++ ClientConfig 1.3.2-pl
 ++ Released on 2015-12-09
